[package]
name = "load_vault_credentials"
description = "hashicorp vault: load username / password kv credentials using a role id and secret id"
version = "0.1.0"
edition = "2021"
authors = ["mbecker20"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vaultrs = { version = "0.7", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
